--- a/index.html
+++ b/index.html
@@ -18,28 +18,35 @@
 			<div id="first-page" class="flex w-full flex-col items-center">
 				<!--First panel-->
 				<!--Make these into buttons allow an extra button to only appear once one is selected-->
-				<div
-					class="mb-8 flex w-full max-w-md items-center justify-around rounded-2xl bg-slate-400 p-1 sm:w-fit"
-				>
-					<button id="vs-computer"></button>
-					<button id="vs-player"></button>
-				</div>
 				<h2
 					id="opponent"
 					class="mb-8 font-['Open_Sans'] text-xl font-semibold xs:text-2xl sm:text-3xl"
 				>
 					<span>PLAYER VS COMPUTER</span>
 				</h2>
-
+				<div
+					class="mb-8 flex w-full max-w-md items-center justify-around rounded-2xl bg-slate-400 p-1 sm:w-fit"
+				>
+					<button id="vs-computer"></button>
+					<button id="vs-player"></button>
+				</div>
 				<button class="rounded-2xl bg-yellow-200 p-3 text-2xl" id="proceed-button">PROCEED</button>
 			</div>
 
-			<div id="second-page" class="hidden">
-				<h3>Pick Player 1's sign</h3>
-				<button>X</button>
-				<button>O</button>
-				<button>Back</button>
-				<button>Start</button>
+			<div id="second-page" class="flex hidden w-full flex-col items-center">
+				<h2 class="mb-8 font-['Open_Sans'] text-xl font-semibold xs:text-2xl sm:text-3xl">
+					Pick Player 1's sign
+				</h2>
+				<div
+					class="mb-8 flex w-full max-w-md items-center justify-around rounded-2xl bg-slate-400 p-1 sm:w-fit"
+				>
+					<button id="vs-computer"></button>
+					<button id="vs-player"></button>
+				</div>
+				<div class="flex w-full max-w-md justify-around">
+					<button class="rounded-2xl bg-red-200 p-3 text-2xl">Back</button>
+					<button class="rounded-2xl bg-green-200 p-3 text-2xl">Start</button>
+				</div>
 			</div>
 		</div>
 
