refactor: rearrange and rename variables

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<div
 					class="mb-8 flex w-full max-w-md items-center justify-around rounded-2xl bg-slate-400 p-1 sm:w-fit"
 				>
-					<button id="vs-computer"></button>
+					<button id="vs-computer" class="selected-item"></button>
 					<button id="vs-player"></button>
 				</div>
 				<button class="rounded-2xl bg-yellow-200 p-3 text-2xl" id="proceed-button">PROCEED</button>
@@ -40,7 +40,7 @@
 				<div
 					class="mb-8 flex w-full max-w-md items-center justify-around rounded-2xl bg-slate-400 p-1 sm:w-fit"
 				>
-					<button class="selected-mode" id="x-symbol"></button>
+					<button class="selected-item" id="x-symbol"></button>
 					<button id="o-symbol"></button>
 				</div>
 				<div class="flex w-full max-w-md justify-around">
