--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 				<div class="cell" id="cell-8"></div>
 				<div class="cell" id="cell-9"></div>
 			</div>
-			<div id="board-cover" class="fixed bottom-2 left-0 hidden h-4/5 w-full bg-opacity-0"></div>
+			<div id="board-cover" class="fixed inset-x-2 left-0 hidden h-2/3 w-full bg-opacity-0"></div>
 		</div>
 
 		<footer
