fix: make `backArrow` adhere to responsive design

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 		<div class="m-12 mb-0 flex flex-col items-center">
 			<!--Title-->
 			<div class="relative flex w-full items-center justify-center">
-				<button id="back-arrow-button" class="absolute left-0 mb-8 hidden"></button>
+				<button
+					id="back-arrow-button"
+					class="bg-part md:bg-full absolute left-0 mb-8 hidden md:left-4 lg:left-8"
+				></button>
 				<h1
 					class="mb-8 font-['Open_Sans'] text-3xl font-bold text-fuchsia-950 xs:text-4xl sm:text-5xl"
 					id="heading"
