fix: change color of footer link for consistency

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 				© Copyright 2024
 				<a
 					href="https://github.com/DefyingGravity10"
-					class="text-cyan-600 hover:text-cyan-500"
+					class="text-fuchsia-700 hover:text-fuchsia-600"
 					target="_blank"
 					>DefyingGravity10</a
 				>
